--- a/src/admin/pages/pets/Pets.module.css
+++ b/src/admin/pages/pets/Pets.module.css
@@ -21,3 +21,14 @@
   border-radius: 10px;
   gap: 1rem;
 }
+.paginate {
+  display: flex;
+  justify-content: flex-end;
+  list-style: none;
+  gap: 1rem;
+  margin-bottom: 0;
+}
+.paginate li a {
+  text-decoration: none;
+  color: #000;
+}
