--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -1,6 +1,13 @@
+.container {
+  background-image: url("../../assets/back.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 2rem;
+}
+
 .form {
   max-width: 400px;
-  margin: 2rem auto;
+  margin: 5rem auto;
   padding: 1rem;
   background-color: #f2f1eb;
   border-radius: 10px;
