--- a/src/components/OutstandingPets/OutstandingPets.module.css
+++ b/src/components/OutstandingPets/OutstandingPets.module.css
@@ -1,26 +1,8 @@
-.sub-cates {
-  display: flex;
-  gap: 1.5rem;
-  margin-top: 1rem;
-}
-.sub-cate {
-  background-color: #fff;
-  color: #000;
-  padding: 0.5rem 1rem;
-  border-radius: 10px;
-  cursor: pointer;
-}
-.sub-cate:hover,
-.sub-cate:active {
-  background-color: #000;
-  color: #fff;
+.list {
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
-.list {
-  margin-top: 1rem;
-  display: flex;
-  gap: 1%;
-}
 .list:hover > div {
   filter: blur(3px);
   opacity: 0.5;
@@ -33,43 +15,10 @@
   opacity: 1;
   box-shadow: 0 8px 20px 0px rgba(0, 0, 0, 0.125);
 }
-/* .item {
-  flex-basis: 24%;
-  border: 1px solid gainsboro;
-  border-radius: 5px;
+@media screen and (min-width: 992px) {
+  .list {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 24px;
+  }
 }
-
-.item div img {
-  width: 100%;
-}
-.body {
-  padding: 1rem;
-}
-.info {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  border-top: 1px dashed #000;
-  border-bottom: 1px dashed #000;
-  padding: 0.5rem;
-}
-.action {
-  padding: 0.5rem 1rem;
-  display: flex;
-  justify-content: center;
-}
-.action button {
-  padding: 6px 1rem;
-  cursor: pointer;
-  border: 1px solid gainsboro;
-  font-family: "Lato", sans-serif;
-  font-weight: 500;
-  border-radius: 6px;
-  background: #8cb9bd;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-  color: #fff;
-}
-.action button:hover {
-  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
-} */
