--- a/src/components/PetFilter/PetFilter.module.css
+++ b/src/components/PetFilter/PetFilter.module.css
@@ -18,3 +18,8 @@
   border: none;
   outline: 1px solid gainsboro;
 }
+@media (max-width: 576px) {
+  .form input {
+    margin-bottom: 1rem;
+  }
+}
