--- a/src/pages/PetsCatePage/PetsCatePage.module.css
+++ b/src/pages/PetsCatePage/PetsCatePage.module.css
@@ -10,7 +10,7 @@
   border-top: 1rem solid #bed1cf;
 }
 .paginate {
-  margin: 2rem;
+  margin: 2rem 0;
   display: flex;
   justify-content: center;
   list-style: none;
