--- a/src/components/Category/Category.module.css
+++ b/src/components/Category/Category.module.css
@@ -13,6 +13,36 @@
   margin-top: 1.5rem;
   margin-bottom: 1rem;
 }
+.btn:link,
+.btn:visited {
+  transition: all 0.2s;
+  position: relative;
+}
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+.btn::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background-color: #b5c0d0;
+  transition: all 0.4s;
+  border-radius: 12px;
+}
+.btn:hover::after {
+  transform: scaleX(1.2) scaleY(1.1);
+  opacity: 0;
+}
 .item {
   cursor: pointer;
+  border-radius: 14px;
 }
