--- a/src/components/OutstandingPets/OutstandingPets.module.css
+++ b/src/components/OutstandingPets/OutstandingPets.module.css
@@ -15,6 +15,17 @@
   opacity: 1;
   box-shadow: 0 8px 20px 0px rgba(0, 0, 0, 0.125);
 }
+.list {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+}
+@media (min-width: 768px) {
+  .list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+  }
+}
 @media screen and (min-width: 992px) {
   .list {
     display: grid;
